--- a/ansible/roles/users/defaults/main.yaml
+++ b/ansible/roles/users/defaults/main.yaml
@@ -2,3 +2,4 @@ users_default_group: users
 users_default_password: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits') }}"
 users_default_shell: /bin/bash
 users_default_state: present
+users_default_create_home: true
