--- a/ansible/roles/security/tasks/password_policies.yaml
+++ b/ansible/roles/security/tasks/password_policies.yaml
@@ -1,3 +1,4 @@
+---
 - name: Install libpam-pwquality
   apt:
     name: libpam-pwquality
@@ -15,7 +16,7 @@
   copy:
     dest: /etc/security/pwquality.conf
     content: ""
-    force: no
+    force: false
     owner: root
     group: root
     mode: "0644"
