--- a/inventory/hosts.yaml
+++ b/inventory/hosts.yaml
@@ -8,4 +8,4 @@ all:
     monitoring:
       hosts:
         test-monitoring-1:
-          ansible_host: test
+          ansible_host: 188.32.160.250
