--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,10 +5,10 @@ retry_files_enabled = False
 timeout = 30
 forks = 10
 
+
 retry_files_save_path = .ansible-retry
 remote_tmp = /tmp/.ansible-${USER}/tmp
-interpreter_python = auto
-log_path=logs/ansible.log
+interpreter_python = /usr/bin/python3
 
 [ssh_connection]
 pipelining = True
