--- a/roles/security/defaults/main.yaml
+++ b/roles/security/defaults/main.yaml
@@ -5,8 +5,8 @@ security_allowed_ports:
   - "{{ security_ssh_port }}"
   - 80
   - 443
-disable_root_ssh: true
-disable_password_auth: true
+security_disable_root_ssh: true
+security_disable_password_auth: true
 
 security_fail2ban_enabled: true
 security_lockout_on: true
@@ -17,12 +17,12 @@ security_password_min_length: 12
 security_auto_updates_enabled: true
 security_auditd_enabled: true
 
-fail2ban_config_template: "fail2ban.local.j2"
-ssh_config_template: "sshd_config.j2"
-fail2ban_default_config:
+security_fail2ban_config_template: "fail2ban.local.j2"
+security_ssh_config_template: "sshd_config.j2"
+security_fail2ban_default_config:
   maxretry: 5
   bantime: 600
   findtime: 600
 
-ufw_default_policy: "deny"
+security_ufw_default_policy: "deny"
 security_update_config_path: "/etc/apt/apt.conf.d/50unattended-upgrades"
